@@ -25,6 +25,7 @@ import java.util.Collection;
 import java.util.Iterator;
 import java.util.List;
 import java.util.ListIterator;
+import java.util.Optional;
 import java.util.Set;
 import java.util.regex.MatchResult;
 import java.util.regex.Matcher;
@@ -338,12 +339,12 @@ public class JavadocMethodCheck extends AbstractCheck {
      * @return whether we should check a given node.
      */
     private boolean shouldCheck(final DetailAST ast) {
-        final AccessModifierOption surroundingAccessModifier = CheckUtil
+        final Optional<AccessModifierOption> surroundingAccessModifier = CheckUtil
                 .getSurroundingAccessModifier(ast);
         final AccessModifierOption accessModifier = CheckUtil
                 .getAccessModifierFromModifiersToken(ast);
-        return Arrays.stream(accessModifiers)
-                        .anyMatch(modifier -> modifier == surroundingAccessModifier)
+        return surroundingAccessModifier.isPresent() && Arrays.stream(accessModifiers)
+                        .anyMatch(modifier -> modifier == surroundingAccessModifier.get())
                 && Arrays.stream(accessModifiers).anyMatch(modifier -> modifier == accessModifier);
     }
 
@@ -435,7 +436,7 @@ public class JavadocMethodCheck extends AbstractCheck {
         boolean result = true;
         // Check if it contains {@inheritDoc} tag
         if (tags.size() == 1
-                && tags.get(0).isInheritDocTag()) {
+                && tags.getFirst().isInheritDocTag()) {
             // Invalid if private, a constructor, or a static method
             if (!JavadocTagInfo.INHERIT_DOC.isValidOn(ast)) {
                 log(ast, MSG_INVALID_INHERIT_DOC);
@@ -1002,7 +1003,7 @@ public class JavadocMethodCheck extends AbstractCheck {
          * @param className token which represents class name.
          * @throws IllegalArgumentException when className is nulls
          */
-        protected ClassInfo(final Token className) {
+        /* package */ ClassInfo(final Token className) {
             name = className;
         }
 
@@ -1011,7 +1012,7 @@ public class JavadocMethodCheck extends AbstractCheck {
          *
          * @return class name
          */
-        public final Token getName() {
+        /* package */ final Token getName() {
             return name;
         }
 
@@ -1039,7 +1040,7 @@ public class JavadocMethodCheck extends AbstractCheck {
          *
          * @return text of the token
          */
-        public String getText() {
+        /* package */ String getText() {
             return text;
         }
 
